--- a/JavaScript_13-10-2022/Dom y Eventos/index.html
+++ b/JavaScript_13-10-2022/Dom y Eventos/index.html
@@ -21,7 +21,7 @@
 
         <label for="colores">
             <span>Colores: </span>
-            <input list="lista_colores" id="colores">
+            <input  type="color" value="#ffbf75" list="lista_colores" id="colores">
             <datalist id="lista_colores">
                 <option value="#ffbf75">#ffbf75</option>
                 <option value="#75c7ff">#75c7ff</option>
@@ -36,12 +36,12 @@
 
         <label for="fuentes">
             <span>Fuentes: </span>
-            <input list="lista_fuentes" id="fuentes">
+            <input list="lista_fuentes" id="fuentes" required>
             <datalist id="lista_fuentes">
-                <option value="arial">Arial</option>
-                <option value="cambria">Cambria</option>
-                <option value="georgia">Georgia</option>
-                <option value="verdana">Verdana</option>
+                <option value="Arial">Arial</option>
+                <option value="Cambria">Cambria</option>
+                <option value="Georgia">Georgia</option>
+                <option value="Verdana">Verdana</option>
             </datalist>
         </label>
 
@@ -51,7 +51,7 @@
         </label>
 
         <section>
-            <input type="button" value="Generar" id="generar">
+            <input type="submit" value="Generar" id="generar">
             <input type="button" value="Finalizar" id="finalizar">
         </section>
     </form>
