--- a/JavaScript_02-11-2022/buscaminas.html
+++ b/JavaScript_02-11-2022/buscaminas.html
@@ -10,7 +10,7 @@
 </head>
 <body class="d-flex flex-column align-items-center w-100">
     <section class="d-flex flex-column align-items-center w-100 mb-5">
-        <h1 class="mt-3 mb-5">Elija la dificultad a la que quiera jugar:</h1>
+        <h1 class="mt-3 mb-5">Elija la dificultad en la que quiera jugar:</h1>
         <div class="d-flex flex-column align-items-center w-50">
             <button type="button" class="btn btn-success mb-3 w-25" value="8">Fácil</button>
             <button type="button" class="btn btn-warning mb-3 w-25" value="12">Intermedio</button>
