--- a/JavaScript_02-11-2022/buscaminas.html
+++ b/JavaScript_02-11-2022/buscaminas.html
@@ -8,19 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Buscaminas</title>
 </head>
-<body class="d-flex flex-column align-items-center w-100">
-    <section class="d-flex flex-column align-items-center w-100 mb-5">
-        <h1 class="mt-3 mb-5">Elija la dificultad en la que quiera jugar:</h1>
+<body>
+    <section>
+        <h1 class="mb-5 w-100 text-center">Elija la dificultad en la que quiera jugar:</h1>
         <div class="d-flex flex-column align-items-center w-50">
-            <button type="button" class="btn btn-success mb-3 w-25" value="8">Fácil</button>
-            <button type="button" class="btn btn-warning mb-3 w-25" value="12">Intermedio</button>
-            <button type="button" class="btn btn-danger mb-3 w-25" value="16">Difícil</button>
+            <button type="button" class="mb-3 easy" value="8">Fácil</button>
+            <button type="button" class="mb-3 middle" value="12">Intermedio</button>
+            <button type="button" class="mb-3 hard" value="16">Difícil</button>
         </div>
     </section>
+
+    <div class="layout">
+        <p class="num_bombs">💣 000</p>
+        <p class="emoji">🙂</p>
+        <p class="game_time">⏱ 00:00</p>
+    </div>
 
     <script type="module" src="./scripts/buscaminas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
-
 </body>
 </html>
