--- a/pruebaExamen/agenda.html
+++ b/pruebaExamen/agenda.html
@@ -40,7 +40,7 @@
                 <option value="varias">Gestiones varias</option>
             </select>
         </div>
-        <input type="submit" value="Crear tarea" class="nueva_tarea btn btn-primary">   
+        <button type="submit" class="nueva_tarea btn btn-primary">Crear tarea</button>
     </div>
 
     <table class="d-none table table-striped w-50 d-flex flex-column justify-content-center align-items-center mt-5">
