--- a/pruebaExamen/agenda.html
+++ b/pruebaExamen/agenda.html
@@ -50,6 +50,8 @@
         <tbody></tbody>
     </table>
     <button type="button" class="otra_tarea d-none btn btn-primary">Insertar nueva tarea</button>
+    <button type="button" class="tareas d-none mt-3 btn btn-primary">Mostrar tareas</button>
+    <button type="button" class="tareas_finalizadas d-none mt-3 btn btn-primary">Mostrar tareas finalizadas</button>
     
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
