--- a/JavaScript_12-12-2022/index.html
+++ b/JavaScript_12-12-2022/index.html
@@ -30,14 +30,14 @@
             <option value="ipv4">Direcciones IPv4</option>
             <option value="color">Colores en hexadecimal</option>
         </select>
-        <p class="expression ms-5 w-25 text-center">A</p>
+        <p class="expression ms-5 w-25 text-center"></p>
     </div>
     <div class="w-100 mb-4 d-flex align-items-center justify-content-center">
         <input type="text" name="text" class="text w-25 form-control">
         <input type="button" name="validate" value="Validar" class="w-25 ms-5 form-control btn btn-primary">
     </div>
     <div>
-        <input type="text" name="result" class="form-control text-center" value="-">
+        <input type="text" name="result" class="result form-control text-center" value="-">
     </div>
 
     <!-- JavaScript Bundle with Popper -->
