expresiones regulares terminado

--- a/JavaScript_12-12-2022/index.html
+++ b/JavaScript_12-12-2022/index.html
@@ -37,7 +37,7 @@
         <input type="button" name="validate" value="Validar" class="w-25 ms-5 form-control btn btn-primary">
     </div>
     <div>
-        <input type="text" name="result" class="result form-control text-center" value="-">
+        <input type="text" name="result" class="result form-control text-center" value="">
     </div>
 
     <!-- JavaScript Bundle with Popper -->
