--- a/JavaScript_08-02-2023/index.html
+++ b/JavaScript_08-02-2023/index.html
@@ -8,16 +8,16 @@
     
     <title>Consumo de APIs</title>
 </head>
-<body>
+<body class="bg-zinc-800">
     <main class="w-full flex flex-wrap justify-center align-middle">
-        <h1 class="w-full text-center font-semibold text-3xl mt-[3rem]">Seleccione una API para consumir</h1>
-        <div class="w-1/3 flex justify-around align-middle mt-[5rem] text-white">
-            <button id="aitor" class="w-[20%] p-2 rounded-lg bg-sky-600 hover:bg-sky-500">API de Aitor</button>
-            <button id="edwin" class="w-[20%] p-2 rounded-lg bg-green-600 hover:bg-green-500">API de Edwin</button>
-            <button id="miguel" class="w-[20%] p-2 rounded-lg bg-red-600 hover:bg-red-500">API de Miguel</button>
+        <h1 class="w-full text-center font-semibold text-3xl text-white mt-[3rem]">Seleccione una API para consumir</h1>
+        <div class="w-[90%] xl:w-1/3 flex justify-around align-middle mt-[3rem] xl:mt-[5rem] pb-8 text-white">
+            <button id="aitor" class="w-[25%] xl:w-[20%] p-2 rounded-lg bg-sky-600 hover:bg-sky-500">API de Aitor</button>
+            <button id="edwin" class="w-[25%] xl:w-[20%] p-2 rounded-lg bg-green-600 hover:bg-green-500">API de Edwin</button>
+            <button id="miguel" class="w-[25%] xl:w-[20%] p-2 rounded-lg bg-red-600 hover:bg-red-500">API de Miguel</button>
         </div>
     </main>
-    <section id="container"></section>
+    <section id="container" class="w-full flex flex-wrap justify-center"></section>
 
     <script src="./src/main.js" type="module"></script>
 </body>
